# eink

./: LICENSE  README.md  main.py  pyproject.toml
lib/: display.py  resources.py
lib/services/: stocks.py  todoist.py  weather.py
